--- a/crates/poirot-types/Cargo.toml
+++ b/crates/poirot-types/Cargo.toml
@@ -29,3 +29,7 @@ ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
 dotenv = "0.15.0"
+clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+
+[features]
+server = []
