metadata functionality (work in progress)
Former-commit-id: 63effb97236bdf80ede5118814fd5bb420a9708f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,7 +94,7 @@ eyre = "0.6.8"
 hyper = "0.14.25"
 
 # Serde
-serde = { version = "1.0" }
+serde = "1.0.171"
 serde_json = { version = "1.0" }
 
 # Numbers
