--- a/crates/poirot-labeller/Cargo.toml
+++ b/crates/poirot-labeller/Cargo.toml
@@ -8,11 +8,15 @@ edition = "2021"
 [dependencies]
 reth-primitives.workspace = true
 sorella-db-clients = { git = "https://github.com/SorellaLabs/Database", package = "sorella-db-clients", branch = "main" }
+
 # serde
+serde = { workspace = true, features = ["derive"]}
+serde_json.workspace = true
 serde_with = { version = "3.3.0", features = ["macros"] }
-serde.workspace = true
+
 # error handling
 thiserror.workspace = true
+
 # numbers
 malachite.workspace = true
 hyper-tls = "0.5.0"
