--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -14,6 +14,8 @@ async-trait.workspace = true
 poirot-types.workspace = true
 poirot-labeller.workspace = true
 reth-primitives.workspace = true
+rayon.workspace = true
+tracing.workspace = true
 # error handling
 thiserror.workspace = true
 
