--- a/crates/poirot-types/Cargo.toml
+++ b/crates/poirot-types/Cargo.toml
@@ -14,6 +14,7 @@ rayon.workspace = true
 malachite.workspace = true
 serde.workspace = true
 phf = { version = "0.11.1", default-features = false }
+clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 
 
 [build-dependencies]
