--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -15,6 +15,7 @@ poirot-types.workspace = true
 poirot-labeller.workspace = true
 poirot-classifer.workspace = true
 reth-primitives.workspace = true
+reth-rpc-types.workspace = true
 rayon.workspace = true
 tracing.workspace = true
 # error handling
