--- a/crates/poirot-types/Cargo.toml
+++ b/crates/poirot-types/Cargo.toml
@@ -15,6 +15,7 @@ malachite.workspace = true
 serde.workspace = true
 phf = { version = "0.11.1", default-features = false }
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+strum = { version = "0.25.0", features = ["derive"] }
 
 
 [build-dependencies]
