--- a/crates/poirot-types/Cargo.toml
+++ b/crates/poirot-types/Cargo.toml
@@ -16,6 +16,7 @@ serde.workspace = true
 phf = { version = "0.11.1", default-features = false }
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 strum = { version = "0.25.0", features = ["derive"] }
+auto_impl = "1.1.0"
 
 
 [build-dependencies]
