--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -20,7 +20,7 @@ rayon.workspace = true
 tracing.workspace = true
 # error handling
 thiserror.workspace = true
-
+auto_impl = "1.1.0"
 # serde
 serde_with = { version = "3.3.0", features = ["macros"] }
 
