--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ resolver = "2"
 
 [patch.crates-io]
 # patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
-revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
 revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
+revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
 
 [workspace.dependencies]
 
@@ -33,25 +33,30 @@ poirot-labeller = { path = "./crates/poirot-labeller/" }
 reth-tracing = { path = "./crates/reth-tracing/" }
 
 # Ethers
-ethers-core = "2.0.7"
-ethers = "2.0.0"
+ethers-core = "=2.0.8"
+ethers = "=2.0.8"
 
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5" }
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5" }
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5" }
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5" }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5" }
-reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5" }
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5" }
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5" }
-reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5" }
-reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "31af4d5" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" , rev="0f14ec4"}
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" , rev="0f14ec4"}
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" , rev="0f14ec4"}
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" , rev="0f14ec4"}
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev="0f14ec4"}
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" , rev="0f14ec4"}
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" , rev="0f14ec4"}
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api" , rev="0f14ec4"}
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" , rev="0f14ec4"}
+reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = ["test-utils"] , rev="0f14ec4"}
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree" , rev="0f14ec4"}
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus" , rev="0f14ec4"}
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev="0f14ec4"}
+reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = ["test-utils"] , rev="0f14ec4"}
+reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = ["test-utils"] , rev="0f14ec4"}
+reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev="0f14ec4"}
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev="0f14ec4"}
+reth-payload-builder ={ git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev="0f14ec4"}
+reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics",  rev="0f14ec4"}
+
 
 # ruint
 ruint = "1.9.0"
