--- a/crates/poirot-labeller/Cargo.toml
+++ b/crates/poirot-labeller/Cargo.toml
@@ -21,7 +21,7 @@ malachite.workspace = true
 hyper-tls = "0.5.0"
 poirot-core.workspace = true
 hyper.workspace = true
-clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+# clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 futures = "0.3.28"
 tokio.workspace = true
 poirot-metrics.workspace = true
