--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -18,6 +18,7 @@ reth-primitives.workspace = true
 reth-rpc-types.workspace = true
 rayon.workspace = true
 tracing.workspace = true
+futures.workspace = true
 # error handling
 thiserror.workspace = true
 auto_impl = "1.1.0"
