--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -11,8 +11,8 @@ edition = "2021"
 poirot-core.workspace = true
 poirot-inspect.workspace = true
 poirot-types.workspace = true
-poirot-classifer.workspace = true
-poirot-labeller.workspace = true
+poirot-classifier.workspace = true
+poirot-database.workspace = true
 poirot-metrics.workspace = true
 malachite.workspace = true
 
