--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -12,8 +12,8 @@ hyper.workspace = true
 serde.workspace = true
 async-trait.workspace = true
 poirot-types.workspace = true
-poirot-labeller.workspace = true
-poirot-classifer.workspace = true
+poirot-database.workspace = true
+poirot-classifier.workspace = true
 reth-primitives.workspace = true
 reth-rpc-types.workspace = true
 rayon.workspace = true
