move to interal version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
 revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
 
 [workspace.dependencies]
+sorella-db-clients = { git = "https://github.com/SorellaLabs/Database", package = "sorella-db-clients", branch = "main" }
 
 # Poirot
 poirot-core = { path = "./crates/poirot-core" }
