--- a/crates/poirot-database/Cargo.toml
+++ b/crates/poirot-database/Cargo.toml
@@ -22,6 +22,7 @@ hyper-tls = "0.5.0"
 poirot-core.workspace = true
 hyper.workspace = true
 futures = "0.3.28"
+tracing.workspace = true
 tokio.workspace = true
 poirot-metrics.workspace = true
 poirot-types.workspace = true
