--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bin"
+name = "mev-poirot"
 version = "0.1.0"
 edition = "2021"
 
@@ -56,7 +56,11 @@ eyre.workspace = true
 # http/rpc
 hyper.workspace = true
 
-
+# cli
+clap = { version = "4.4.6", features = ["derive"] }
+clap_complete = "4.4.3"
+# logging
+indoc = "2"
 # prometheus
 metrics-process.workspace = true
 
