--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,35 +34,35 @@ poirot-database = { path = "./crates/poirot-database/" }
 reth-tracing = { path = "./crates/reth-tracing/" }
 
 # Ethers
-ethers-core = "=2.0.8"
-ethers = "=2.0.8"
+ethers-core = "2.0.10"
+ethers = "2.0.10"
 
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "0f14ec4" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "0f14ec4" }
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "0f14ec4" }
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "0f14ec4" }
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "0f14ec4" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "0f14ec4" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "0f14ec4" }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "0f14ec4" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "0f14ec4" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "1b16d80" }
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "1b16d80" }
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "1b16d80" }
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "1b16d80" }
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "1b16d80" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "1b16d80" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "1b16d80" }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "1b16d80" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "1b16d80" }
 reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = [
   "test-utils",
-], rev = "0f14ec4" }
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "0f14ec4" }
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "0f14ec4" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "0f14ec4" }
+], rev = "1b16d80" }
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "1b16d80" }
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "1b16d80" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "1b16d80" }
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
   "test-utils",
-], rev = "0f14ec4" }
+], rev = "1b16d80" }
 reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
   "test-utils",
-], rev = "0f14ec4" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "0f14ec4" }
-reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "0f14ec4" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "0f14ec4" }
-reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "0f14ec4" }
+], rev = "1b16d80" }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "1b16d80" }
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "1b16d80" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "1b16d80" }
+reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "1b16d80" }
 
 
 # ruint
