feat: only make db requests when running in server mode
Former-commit-id: dfce21154dc4edfaf589c8458048a7f5caf84481

--- a/crates/poirot-classifier/Cargo.toml
+++ b/crates/poirot-classifier/Cargo.toml
@@ -24,6 +24,9 @@ serde_json.workspace = true
 paste = "1.0.14"
 phf = { version = "0.11", default-features = false }
 
+[features]
+server = []
+
 [build-dependencies]
 tokio.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
