--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -67,4 +67,4 @@ metrics-process.workspace = true
 rayon.workspace = true
 
 [features]
-server = ["poirot-types/server"]
+server = ["poirot-types/server", "poirot-core/server", "poirot-classifier/server"]
