--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -65,6 +65,9 @@ log = "0.4.18"
 env_logger = "0.10.0"
 phf = { version = "0.11", default-features = false }
 
+[features]
+server = []
+
 [build-dependencies]
 tokio.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
