--- a/crates/poirot-classifier/Cargo.toml
+++ b/crates/poirot-classifier/Cargo.toml
@@ -20,7 +20,7 @@ rayon.workspace = true
 malachite.workspace = true
 serde_json.workspace = true
 
-
+parking_lot = "0.12.1"
 paste = "1.0.14"
 phf = { version = "0.11", default-features = false }
 
