--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -34,7 +34,7 @@ tracing = "0.1.37"
 tokio = { version = "1.28.2", features = ["full", "tracing"] }
 lazy_static = "1.4.0"
 futures = "0.3.28"
-async_trait.workspace = true
+async-trait.workspace = true
 
 # Alloy
 alloy-sol-types.workspace = true
