--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -27,6 +27,7 @@ ruint = { workspace = true, features = ["primitive-types", "rlp"] }
 brontes-types.workspace = true
 brontes-metrics.workspace = true
 ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
+auto_impl = "1.1.0"
 
 # tracing
 tracing = "0.1.37"
