--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ members = [
   "crates/brontes-metrics",
   "crates/tracing",
   "crates/brontes-database",
+  "crates/brontes-macros",
 ]
-
 
 resolver = "2"
 
