--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -24,6 +24,8 @@ serde_json.workspace = true
 parking_lot = "0.12.1"
 paste = "1.0.14"
 phf = { version = "0.11", default-features = false }
+# macro
+brontes-macros = { path = "../brontes-macros/" }
 
 [features]
 server = []
