--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,3 +111,7 @@ c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
 hex-literal = "0.4.1"
 rayon = "1.7.0"
 dotenv = "0.15.0"
+
+[features]
+server = ["bin/server"]
+test_run = ["bin/test_run"]
