--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -70,6 +70,7 @@ phf = { version = "0.11", default-features = false }
 
 [build-dependencies]
 tokio.workspace = true
+reth-tracing.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 hyper.workspace = true
 hyper-tls = "0.5.0"
@@ -81,3 +82,10 @@ ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
 dotenv = "0.15.0"
+toml = "0.8.2"
+reth-rpc-types.workspace = true
+reth-primitives.workspace = true
+futures = "0.3.28"
+
+[features]
+test_run = []
