--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -13,7 +13,7 @@ tracing.workspace = true
 rayon.workspace = true
 malachite.workspace = true
 serde.workspace = true
-sorella-db-clients.workspace = true
+sorella-db-databases.workspace = true
 phf = { version = "0.11.1", default-features = false }
 strum = { version = "0.25.0", features = ["derive"] }
 auto_impl = "1.1.0"
@@ -33,7 +33,7 @@ reth-primitives.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
 dotenv = "0.15.0"
-sorella-db-clients.workspace = true
+sorella-db-databases.workspace = true
 
 [features]
 server = []
