--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -77,7 +77,8 @@ hyper-tls = "0.5.0"
 serde.workspace = true
 serde_json.workspace = true
 alloy-etherscan.workspace = true
-alloy-json-abi.workspace = true
+rayon = "1.7.0"
+alloy-json-abi = { workspace = true, features = ["serde_json"] }
 ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
