--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -18,6 +18,7 @@ tracing.workspace = true
 hex-literal.workspace = true
 rayon.workspace = true
 lazy_static = "1.4.0"
+once_cell = "1.18.0"
 
 malachite.workspace = true
 serde_json.workspace = true
@@ -54,4 +55,3 @@ reth-rpc-types.workspace = true
 reth-primitives.workspace = true
 futures = "0.3.28"
 itertools = "0.11.0"
-
