--- a/.github/workflows/telegram_bot_admin_update.yaml
+++ b/.github/workflows/telegram_bot_admin_update.yaml
@@ -2,7 +2,7 @@ name: telegram bot - admin update
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 8 * * *'
   workflow_dispatch:
 
 jobs:
