--- a/crates/alloy-etherscan/Cargo.toml
+++ b/crates/alloy-etherscan/Cargo.toml
@@ -22,12 +22,10 @@ all-features = true
 ethers-core = { version = "2.0.7" }
 ethers-solc = { version = "2.0.7", optional = true }
 
-alloy-sol-types = { git = "https://github.com/Will-Smith11/alloy-core.git", package = "alloy-sol-types", features = [
-  "json",
-] }
-alloy-primitives = { git = "https://github.com/Will-Smith11/alloy-core.git", package = "alloy-primitives" }
-alloy-json-abi = { git = "https://github.com/Will-Smith11/alloy-core.git", package = "alloy-json-abi" }
-alloy-dyn-abi = { git = "https://github.com/Will-Smith11/alloy-core.git", package = "alloy-dyn-abi" }
+alloy-sol-types = { workspace = true, package = "alloy-sol-types", features = ["json"] }
+alloy-primitives.workspace = true
+alloy-json-abi.workspace = true
+alloy-dyn-abi.workspace = true
 
 reqwest = { version = "0.11.18", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
