--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,4 +14,6 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Echo repository name
-        run: echo "Repository name is ${{ github.repository }}"
+        run: |
+          repo_name="${{ github.repository }}"
+          echo "Repository name is: ${repo_name#SorellaLabs/}"
