--- a/.github/workflows/telegram_bot_daily_note.yaml
+++ b/.github/workflows/telegram_bot_daily_note.yaml
@@ -21,4 +21,4 @@ jobs:
         GH_TOKEN: ${{ secrets.CI }}
 
     - name: Run Rust Binary
-      run: ./Linux/github-actions telegram-bot -t ${{ secrets.TELEGRAM_BOT_TOKEN }} -g ${{ secrets.G_API_KEY }} --repo brontes -s brontes -d
+      run: ./Linux/github-actions telegram-bot -t ${{ secrets.TELEGRAM_BOT_TOKEN }} -g ${{ secrets.G_API_KEY }} --repo ${{ vars.REPO }} -s ${{ vars.PROJECT }} -d
