--- a/.github/workflows/telegram_bot_new_issue.yaml
+++ b/.github/workflows/telegram_bot_new_issue.yaml
@@ -22,4 +22,4 @@ jobs:
         GH_TOKEN: ${{ secrets.CI }}
 
     - name: Run Rust Binary
-      run: ./Linux/github-actions telegram-bot -t ${{ secrets.TELEGRAM_BOT_TOKEN }} -g ${{ secrets.G_API_KEY }} --repo sorella-website -s frontend -n --number ${{ github.event.issue.number }}
+      run: ./Linux/github-actions telegram-bot -t ${{ secrets.TELEGRAM_BOT_TOKEN }} -g ${{ secrets.G_API_KEY }} --repo ${{ vars.REPO }} -s ${{ vars.PROJECT }} -n --number ${{ github.event.issue.number }}
