--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -32,7 +32,7 @@ ethers-core.workspace = true
 reth-primitives.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
-dotenv = "0.15.0"
+dotenv.workspace = true
 sorella-db-databases.workspace = true
 
 [features]
