--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -33,6 +33,7 @@ itertools = "0.11.0"
 
 [features]
 test_run = ["brontes-database/test_run", "server"]
+tests = []
 server = []
 
 [build-dependencies]
