--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+# Database
 sorella-db-databases = { git = "https://github.com/SorellaLabs/Database", branch = "main" }
+clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 
 # Poirot
 brontes-core = { path = "./crates/brontes-core" }
@@ -25,11 +27,14 @@ brontes-types = { path = "./crates/brontes-types/" }
 brontes-classifier = { path = "./crates/brontes-classifier/" }
 brontes-metrics = { path = "./crates/brontes-metrics/" }
 brontes-database = { path = "./crates/brontes-database/" }
+brontes-macros = { path = "./crates/brontes-macros/" }
 reth-tracing = { path = "./crates/reth-tracing/" }
 
 # Ethers
 ethers-core = "2.0.10"
+ethers-solc = "2.0.10"
 ethers = "2.0.10"
+ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
 
 # Reth
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "1b16d80" }
@@ -58,9 +63,11 @@ reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-e
 reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "1b16d80" }
 reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "1b16d80" }
 
-
 # ruint
 ruint = "1.9.0"
+
+# revm
+revm-primitives = "1.1.2"
 
 # Alloy
 alloy-etherscan = { path = "./crates/alloy-etherscan" }
@@ -77,10 +84,7 @@ async-trait = "0.1.73"
 
 #Tracing
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", default-features = false, features = [
-  "env-filter",
-  "fmt",
-] }
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
 colored = "2.0"
 
 # Metrics
@@ -99,19 +103,38 @@ eyre = "0.6.8"
 # http/rpc
 hyper = "0.14.25"
 hyper-tls = "0.5.0"
+reqwest = "0.11.22"
 
 # Serde
 serde = "1.0.171"
-serde_json = { version = "1.0" }
+serde_json =  "1.0.1"
+serde_with = "3.3.0"
 
 # Numbers
 malachite = "0.4.0"
 
-# Misc
+# phf
+phf = "0.11.2"
+phf_codegen = "0.11.2"
+
+# metrics
+metrics = "0.21.1"
+
+# misc
 c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
 hex-literal = "0.4.1"
 rayon = "1.7.0"
 dotenv = "0.15.0"
+semver = "1.0"
+lazy_static = "1.4.0"
+once_cell = "1.18.0"
+itertools = "0.11.0"
+parking_lot = "0.12.1"
+toml = "0.8.2"
+auto_impl = "1.1.0"
+strum = "0.25.0"
+
+
 
 [profile.dev]
 opt-level = 0           # No optimizations
