--- a/crates/reth-tracing/Cargo.toml
+++ b/crates/reth-tracing/Cargo.toml
@@ -11,7 +11,6 @@ reth-tasks.workspace = true
 reth-rpc.workspace = true
 reth-rpc-types.workspace = true
 reth-rpc-api.workspace = true
-reth-rpc-builder.workspace = true
 reth-provider.workspace = true
 reth-transaction-pool.workspace = true
 reth-network-api.workspace = true
@@ -22,7 +21,7 @@ reth-beacon-consensus.workspace = true
 reth-revm.workspace = true
 reth-interfaces.workspace = true
 
-# err
+# error
 eyre = "0.6.8"
 
 # Async
