--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,7 +108,9 @@ reqwest = "0.11.22"
 # Serde
 serde = "1.0.171"
 serde_json =  "1.0.1"
-serde_with = "3.3.0"
+serde_with = "3.4.0"
+serde_repr = "0.1.16"
+
 
 # Numbers
 malachite = "0.4.0"
