--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -11,7 +11,7 @@ brontes-core = { workspace = true, features = ["tests"] }
 # brontes-inspect = { workspace = true, features = ["tests"] }
 brontes-types = { workspace = true, features = ["tests"] }
 brontes-classifier = { workspace = true, features = ["tests"] }
-# brontes-metrics = { workspace = true, features = ["tests"] }
+brontes-metrics.workspace = true
 brontes-database = { workspace = true, features = ["tests"] }
 # brontes-macros = { workspace = true, features = ["tests"] }
 
@@ -20,6 +20,7 @@ sorella-db-databases.workspace = true
 
 # reth
 reth-rpc-types.workspace = true
+reth-rpc.workspace = true
 reth-primitives.workspace = true
 
 # tracing
