--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -33,7 +33,7 @@ reth-primitives.workspace = true
 reth-db.workspace = true
 reth-blockchain-tree.workspace = true
 reth-beacon-consensus.workspace = true
-reth-revm.workspace = true
+#reth-revm.workspace = true
 reth-interfaces.workspace = true
 
 # Alloy
