--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -18,7 +18,7 @@ reth-network-api.workspace = true
 reth-db.workspace = true
 reth-blockchain-tree.workspace = true
 reth-beacon-consensus.workspace = true
-reth-revm.workspace = true
+#reth-revm.workspace = true
 reth-interfaces.workspace = true
 reth-metrics.workspace = true
 reth-tracing.workspace = true
