--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -23,6 +23,10 @@ reth-rpc-types.workspace = true
 reth-rpc.workspace = true
 reth-primitives.workspace = true
 
+# alloy
+alloy-sol-macro = { workspace = true, features = ["json"] }
+alloy-sol-types.workspace = true
+
 # tracing
 reth-tracing.workspace = true
 
